--- a/app/src/main/res/layout/grid_tattoo_item.xml
+++ b/app/src/main/res/layout/grid_tattoo_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.tattood.tattood.SquareLayout
+<com.tattood.app.SquareLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -25,5 +25,5 @@
                 fresco:actualImageScaleType="fitXY" />
         </FrameLayout>
     </FrameLayout>
-</com.tattood.tattood.SquareLayout>
+</com.tattood.app.SquareLayout>
 
