--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/pattern7"
-    tools:context="com.tattood.tattood.RegisterActivity">
+    tools:context="com.tattood.app.RegisterActivity">
 
     <EditText
         android:layout_width="match_parent"
