--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeContainer"
     android:background="@color/colorPureWhite"
@@ -41,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:fitsSystemWindows="true"
-            android:background="@drawable/pattern9"
+            android:background="@drawable/pattern11"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -64,21 +65,13 @@
                     android:orientation="vertical"
                     android:paddingTop="20dp">
 
-                    <android.support.v7.widget.CardView
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/user_image"
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:innerRadius="0dp"
-                        android:shape="ring"
-                        android:thicknessRatio="1.9"
-                        tools:cardCornerRadius="40dp"
-                        tools:elevation="12dp">
-
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:id="@+id/user_image"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp" />
-                    </android.support.v7.widget.CardView>
-
+                        fresco:roundedCornerRadius="5dp"
+                        fresco:roundAsCircle="true"
+                        fresco:roundingBorderWidth="1dp"/>
                     <TextView
                         android:id="@+id/owner_name"
                         android:layout_width="wrap_content"
