--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -9,15 +9,16 @@
     android:orientation="vertical"
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="8dp"
-    android:background="@drawable/pattern7">
+    android:background="@drawable/pattern11">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="35dp"
+        android:layout_marginBottom="65dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         card_view:cardCornerRadius="10dp"
@@ -25,33 +26,25 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="508dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="80dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:orientation="horizontal">
 
-                <android.support.v7.widget.CardView
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/user_image"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginStart="30dp"
-                    android:innerRadius="0dp"
-                    android:shape="ring"
-                    android:thicknessRatio="1.9"
-                    tools:cardCornerRadius="40dp"
-                    tools:elevation="12dp">
-
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:id="@+id/user_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="80dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_focused"/>
-                </android.support.v7.widget.CardView>
+                    fresco:roundedCornerRadius="5dp"
+                    fresco:roundAsCircle="true"
+                    fresco:roundWithOverlayColor="@android:color/white"
+                    fresco:roundingBorderColor="@color/colorWhite"
+                    fresco:roundingBorderWidth="1dp"/>
 
                 <TextView
                     android:id="@+id/owner_name"
