--- a/app/src/main/res/layout/tattoo_item.xml
+++ b/app/src/main/res/layout/tattoo_item.xml
@@ -10,13 +10,13 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorTransPurple">
+        android:background="@drawable/color5">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorPureWhite"
-            android:layout_margin="4dp">
+            android:layout_margin="2dp">
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/item_image"
                 android:layout_width="fill_parent"
