--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,42 +1,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center_horizontal"
-              android:orientation="vertical"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:background="@drawable/pattern11"
-              tools:context="com.tattood.tattood.LoginActivity"
-              android:weightSum="2">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:background="@drawable/color5"
+    tools:context="com.tattood.tattood.LoginActivity"
+    android:weightSum="3">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="2dp"
             android:layout_marginEnd="0dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="40dp"
             android:background="@android:color/transparent"
-            android:src="@drawable/tattood_logo4"/>
+            android:src="@drawable/tattood" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_vertical">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/link_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,20 +44,32 @@
             android:textSize="20dp"
             android:textStyle="bold"/>
 
-        <!--<com.google.android.gms.common.SignInButton-->
+        <com.google.android.gms.common.SignInButton-->
             <!--android:id="@+id/login_button"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_gravity="center"-->
             <!--android:layout_height="wrap_content" />-->
 
-        <ImageButton
+<!--        <ImageButton
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/google_button_shape"
-            android:src="@drawable/signup_google_button"/>
+            android:src="@drawable/signup_google_button"/>-->
+
+        <com.shaishavgandhi.loginbuttons.GooglePlusButton
+            android:id="@+id/login_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:textAlignment="center"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:text="Sign in with Google"
+            app:iconSize="30dp"
+            app:transparentBackground="true"
+            app:roundedCorner="true"/>
 
     </LinearLayout>
             <!--android:background="@color/colorWhite"-->
