--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             android:fitsSystemWindows="true"
-            android:background="@drawable/pattern11"
+            android:background="@drawable/color5"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -99,7 +99,8 @@
             app:layout_anchorGravity="bottom|right|end"
             app:srcCompat="@drawable/ic_file_upload_black_24dp"
             android:layout_margin="@dimen/fab_margin"
-            android:clickable="true"/>
+            android:clickable="true"
+            app:backgroundTint="@color/colorSunriseGrey"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
