--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@drawable/pattern7"
-    tools:context="com.tattood.tattood.RegisterActivity">
+    tools:context="com.tattood.tattood.RegisterActivity"
+    android:background="@drawable/color5">
 
     <EditText
         android:layout_width="match_parent"
@@ -22,9 +18,12 @@
         android:id="@+id/editText_username"
         android:layout_marginTop="165dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:textColor="@color/colorPureWhite"/>
 
-    <Button
+<!--    <Button
         android:text="@string/register"
         android:textStyle="italic"
         android:textColor="@color/colorWhite"
@@ -36,5 +35,23 @@
         android:layout_below="@+id/editText_username"
         android:layout_alignParentStart="true"
         android:layout_marginTop="12dp"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>-->
+
+    <com.shaishavgandhi.loginbuttons.GooglePlusButton
+        android:id="@+id/button_register"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:textAlignment="center"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="@string/register"
+        app:transparentBackground="true"
+        app:roundedCorner="true"
+        app:iconSize="0dp"
+        android:layout_below="@+id/editText_username"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp" />
+
 </RelativeLayout>
