--- a/app/src/main/res/drawable/color_midnight_bg.xml
+++ b/app/src/main/res/drawable/color_midnight_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/colorNamn1"
-        android:endColor="@color/colorNamn2"
+        android:startColor="@color/colorNamnGradient2"
+        android:endColor="@color/colorMidnight1"
         android:angle="0"/>
 </shape>
