--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -46,23 +46,24 @@
                     android:layout_weight="3"
                     android:gravity="center_vertical|center"
                     android:text="@string/recent"
-                    android:textColor="@color/colorSunrise1"
+                    android:textColor="@color/colorGrey1"
                     android:textAlignment="center"
                     android:textStyle="bold"
-                    android:textSize="16dp"/>
+                    android:textSize="18sp"/>
 
                 <com.karlgao.materialroundbutton.MaterialButton
                     android:id="@+id/see_more_recent"
                     android:layout_width="0dp"
                     android:layout_weight="2"
-                    android:layout_height="36dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="top"
-                    app:mb_buttonColor="@color/colorSunriseGrey"
+                    app:mb_buttonColor="@color/colorPureWhite"
                     app:mb_buttonType="raised"
-                    app:mb_cornerRadius="28dp"
-                    app:mb_rippleColor="#40ffffff"
+                    app:mb_cornerRadius="20dp"
                     app:mb_text="See More"
-                    app:mb_textColor="#ffffff"
+                    app:mb_textColor="@color/colorGrey1"
+                    app:mb_borderColor="@color/colorGrey1"
+                    app:mb_borderWidth="2dp"
                     app:mb_textSize="16sp" />
 
             </LinearLayout>
@@ -73,6 +74,8 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="0dp"
                 android:weightSum="1">
                 <View
                     android:layout_width="0dp"
@@ -80,10 +83,9 @@
                     android:layout_weight="0.1"
                     android:background="@android:color/transparent"/>
                 <View
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_weight="0.8"
-                    android:background="@drawable/color5"/>
+                    android:background="@color/colorGrey1"/>
                 <View
                     android:layout_width="0dp"
                     android:layout_height="1dp"
@@ -121,23 +123,25 @@
                     android:layout_weight="3"
                     android:gravity="center_vertical|center"
                     android:text="@string/popular"
-                    android:textColor="@color/colorSunrise1"
+                    android:textColor="@color/colorGrey1"
                     android:textStyle="bold"
                     android:textAlignment="center"
-                    android:textSize="16dp"/>
+                    android:textSize="18sp"/>
 
                 <com.karlgao.materialroundbutton.MaterialButton
                     android:id="@+id/see_more_popular"
                     android:layout_width="0dp"
                     android:layout_weight="2"
-                    android:layout_height="36dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="top"
-                    app:mb_buttonColor="@color/colorSunriseGrey"
+                    app:mb_buttonColor="@color/colorPureWhite"
                     app:mb_buttonType="raised"
-                    app:mb_cornerRadius="28dp"
+                    app:mb_cornerRadius="20dp"
                     app:mb_rippleColor="#40ffffff"
                     app:mb_text="See More"
-                    app:mb_textColor="#ffffff"
+                    app:mb_textColor="@color/colorGrey1"
+                    app:mb_borderColor="@color/colorGrey1"
+                    app:mb_borderWidth="2dp"
                     app:mb_textSize="16sp" />
 
             </LinearLayout>
@@ -157,10 +161,9 @@
                     android:background="@android:color/transparent"/>
 
                 <View
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:layout_weight="0.8"
-                    android:background="@drawable/color5"/>
+                    android:background="@color/colorGrey1"/>
 
                 <View
                     android:layout_width="0dp"
