--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.tattood.tattood.RegisterActivity"
-    android:background="@drawable/color5">
+    android:background="@drawable/tattoo_artist">
 
     <EditText
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:textColorHint="@color/colorWhite"
         android:ems="10"
         android:id="@+id/editText_username"
-        android:layout_marginTop="165dp"
+        android:layout_marginTop="270dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
