--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -15,10 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="35dp"
-        app:cardCornerRadius="10dp"
+        app:cardCornerRadius="0dp"
         app:cardElevation="10dp">
 
         <android.support.v4.widget.NestedScrollView
@@ -70,7 +71,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="0.1"
                     android:background="@color/colorPureWhite"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -79,15 +81,15 @@
 
                         <Switch
                             android:id="@+id/switch_visibility"
-                            android:layout_width="wrap_content"
+                            android:layout_width="53dp"
                             android:layout_height="wrap_content"
-                            android:textAlignment="viewStart"/>
+                            android:textAlignment="viewStart" />
 
                         <TextView
                             android:id="@+id/label_visibility"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/sw_public"/>
+                            android:text="  Public"/>
 
                     </LinearLayout>
 
@@ -116,16 +118,22 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_weight="1.40">
 
-                        <ImageView
+
+                        <android.support.design.widget.FloatingActionButton
                             android:id="@+id/edit_finish"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
                             android:gravity="end"
+                            app:layout_anchor="@+id/viewpager"
+                            app:layout_anchorGravity="bottom|right|end"
                             app:srcCompat="@drawable/ic_file_upload_black_24dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_alignParentEnd="true"/>
+                            android:layout_margin="@dimen/fab_margin"
+                            android:clickable="true"
+                            app:backgroundTint="@color/colorSunriseGrey"
+                            />
                     </RelativeLayout>
 
                 </LinearLayout>
