--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="2"
-    android:background="@drawable/color5"
+    android:background="@color/colorGrey2"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
