--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               xmlns:tools="http://schemas.android.com/tools"
-              android:background="@drawable/color5"
+              android:background="@color/colorGrey1"
               android:gravity="center_horizontal"
               android:orientation="vertical"
               android:paddingBottom="@dimen/activity_vertical_margin"
@@ -15,13 +15,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="308dp"
+        android:layout_width="324dp"
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
         android:layout_marginBottom="2dp"
         android:layout_marginEnd="0dp"
+        android:layout_marginTop="24dp"
+        android:layout_weight="0.26"
         android:background="@android:color/transparent"
-        android:layout_weight="0.11"
-        android:src="@drawable/tattood_logo4" />
+        android:src="@drawable/tattood" />
 </LinearLayout>
