--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -61,6 +61,7 @@
                     app:mb_buttonType="raised"
                     app:mb_cornerRadius="20dp"
                     app:mb_text="See More"
+                    app:mb_rippleColor="@color/colorNamn1"
                     app:mb_textColor="@color/colorGrey1"
                     app:mb_borderColor="@color/colorGrey1"
                     app:mb_borderWidth="2dp"
@@ -137,7 +138,7 @@
                     app:mb_buttonColor="@color/colorPureWhite"
                     app:mb_buttonType="raised"
                     app:mb_cornerRadius="20dp"
-                    app:mb_rippleColor="#40ffffff"
+                    app:mb_rippleColor="@color/colorNamn1"
                     app:mb_text="See More"
                     app:mb_textColor="@color/colorGrey1"
                     app:mb_borderColor="@color/colorGrey1"
