--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -10,17 +10,26 @@
     tools:layout_editor_absoluteX="8dp"
     tools:layout_editor_absoluteY="8dp">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@drawable/color5"
+        android:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
+
         app:cardCornerRadius="0dp"
-        app:cardElevation="10dp">
+        app:cardElevation="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp">
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
@@ -31,6 +40,20 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:weightSum="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="6dp"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+                    <View
+                        android:id="@+id/view6"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGrey1"
+                        android:layout_marginTop="5dp"/>
+                </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -48,24 +71,21 @@
                         tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
                         <!--android:scaleType="fitCenter"-->
 
-                    <ImageView
-                        android:id="@+id/crop_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignTop="@+id/tattoo_image"
-                        app:srcCompat="@drawable/ic_content_cut_black_24dp"/>
 
-                    <ImageView
-                        android:id="@+id/crop_revert"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_below="@+id/crop_button"
-                        app:srcCompat="@drawable/ic_replay_black_24dp"
-                        android:visibility="invisible"/>
                 </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="11dp"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
+                    <View
+                        android:id="@+id/view7"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGrey1"
+                        android:layout_marginTop="0dp"/>
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -77,7 +97,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:weightSum="1">
 
                         <Switch
                             android:id="@+id/switch_visibility"
@@ -87,9 +108,28 @@
 
                         <TextView
                             android:id="@+id/label_visibility"
-                            android:layout_width="match_parent"
+                            android:layout_width="216dp"
                             android:layout_height="wrap_content"
-                            android:text="  Public"/>
+                            android:text="Public"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="0.62" />
+                        <ImageView
+                            android:id="@+id/crop_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignTop="@+id/tattoo_image"
+                            app:srcCompat="@drawable/ic_content_cut_black_24dp"/>
+
+                        <ImageView
+                            android:id="@+id/crop_revert"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_below="@+id/crop_button"
+                            android:layout_marginLeft="10dp"
+                            app:srcCompat="@drawable/ic_replay_black_24dp"
+                            android:visibility="invisible"/>
 
                     </LinearLayout>
 
@@ -102,6 +142,7 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPersonName"
                         android:maxLength="14"
+                        android:textColorHighlight="@color/colorNamn1"
                         android:maxLines="1"/>
 
                     <com.cunoraz.tagview.TagView
@@ -119,7 +160,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1.40">
+                        android:layout_weight="7.32">
 
 
                         <android.support.design.widget.FloatingActionButton
