--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:weightSum="2"
     android:background="@color/colorGrey2"
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:background="@drawable/color5"
-        android:theme="@style/ToolBarStyle"/>
-        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
+        android:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
 
     <android.support.v7.widget.RecyclerView
