--- a/app/src/main/res/layout/activity_tattoo.xml
+++ b/app/src/main/res/layout/activity_tattoo.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <com.facebook.drawee.view.SimpleDraweeView
@@ -36,18 +36,11 @@
             android:layout_marginStart="10dp"/>
     </LinearLayout>
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@color/colorPureWhite">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,19 +48,19 @@
             android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="6dp"
-            android:orientation="vertical"
-            android:weightSum="1">
-
-            <View
-                android:id="@+id/view6"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/colorGrey1"
-                android:layout_marginTop="5dp"/>
-        </LinearLayout>
+                android:layout_height="6dp"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <View
+                    android:id="@+id/view6"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorGrey1"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
 
             <com.facebook.drawee.view.SimpleDraweeView
                 android:id="@+id/tattoo_image"
@@ -137,6 +130,6 @@
                 app:textPaddingTop="5dp"/>
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
