--- a/app/src/main/res/layout/activity_tattoo_edit.xml
+++ b/app/src/main/res/layout/activity_tattoo_edit.xml
@@ -11,119 +11,146 @@
     tools:layout_editor_absoluteY="8dp"
     android:background="@drawable/color5">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@drawable/color5"
+        android:theme="@style/ToolBarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginBottom="35dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="35dp"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="10dp">
+        android:background="@color/colorPureWhite"
+        android:fillViewport="true">
 
-        <android.support.v4.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="6dp"
+                android:orientation="vertical"
+                android:weightSum="1">
 
-                <RelativeLayout
+                <View
+                    android:id="@+id/view6"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp">
+                    android:layout_height="1dp"
+                    android:background="@color/colorGrey1"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
 
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:id="@+id/tattoo_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_margin="5dp"
-                        android:background="@android:color/transparent"
-                        android:contentDescription="@string/tattoo_description"
-                        fresco:actualImageScaleType="fitCenter"
-                        fresco:placeholderImage="@drawable/common_google_signin_btn_icon_dark_normal"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="370dp">
 
-                    <ImageView
-                        android:id="@+id/button_delete"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignTop="@+id/tattoo_image"
-                        app:srcCompat="@drawable/ic_delete_black_24dp"/>
-                </RelativeLayout>
+                <com.facebook.drawee.view.SimpleDraweeView
+                    android:id="@+id/tattoo_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="370dp"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/tattoo_description"
+                    fresco:actualImageScaleType="fitCenter"
+                    fresco:placeholderImage="@drawable/common_google_signin_btn_icon_dark_normal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp" />
+
+                <ImageView
+                    android:id="@+id/button_delete"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@+id/tattoo_image"
+                    app:srcCompat="@drawable/ic_delete_black_24dp"/>
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="11dp"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <View
+                    android:id="@+id/view7"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorGrey1"
+                    android:layout_marginTop="0dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/colorPureWhite"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@color/colorPureWhite"
-                    android:orientation="vertical">
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
+                    <Switch
+                        android:id="@+id/switch_visibility"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="20dp"
+                        android:textAlignment="viewStart"/>
+
+                    <TextView
+                        android:id="@+id/label_visibility"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <Switch
-                            android:id="@+id/switch_visibility"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="20dp"
-                            android:textAlignment="viewStart"/>
-
-                        <TextView
-                            android:id="@+id/label_visibility"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/sw_public"/>
-
-                    </LinearLayout>
-
-                    <EditText
-                        android:id="@+id/new_tag"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="@string/add_new_tag"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPersonName"
-                        android:maxLength="14"
-                        android:maxLines="1"/>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <com.cunoraz.tagview.TagView
-                            android:id="@+id/tag_list_edit"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="10dp"
-                            app:lineMargin="5dp"
-                            app:tagMargin="5dp"
-                            app:textPaddingBottom="5dp"
-                            app:textPaddingLeft="8dp"
-                            app:textPaddingRight="8dp"
-                            app:textPaddingTop="5dp">
-
-                        </com.cunoraz.tagview.TagView>
-
-                        <Button
-                            android:id="@+id/edit_finish"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignBottom="@+id/tag_list_edit"
-                            android:layout_alignEnd="@+id/tag_list_edit"
-                            android:text="Save"/>
-
-                    </RelativeLayout>
+                        android:text="@string/sw_public"/>
 
                 </LinearLayout>
+
+                <EditText
+                    android:id="@+id/new_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/add_new_tag"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLength="14"
+                    android:maxLines="1"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.cunoraz.tagview.TagView
+                        android:id="@+id/tag_list_edit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="10dp"
+                        app:lineMargin="5dp"
+                        app:tagMargin="5dp"
+                        app:textPaddingBottom="5dp"
+                        app:textPaddingLeft="8dp"
+                        app:textPaddingRight="8dp"
+                        app:textPaddingTop="5dp">
+
+                    </com.cunoraz.tagview.TagView>
+
+                    <Button
+                        android:id="@+id/edit_finish"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/tag_list_edit"
+                        android:layout_alignEnd="@+id/tag_list_edit"
+                        android:text="Save"/>
+
+                </RelativeLayout>
+
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
