--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -16,170 +16,201 @@
         android:layout_height="56dp"
         android:background="@drawable/color5"
         android:theme="@style/ToolBarStyle"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:weightSum="1">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
 
-        app:cardCornerRadius="0dp"
-        app:cardElevation="10dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:showDividers="end">
+
+            <TextView
+                android:id="@+id/toolbar_cancel"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                android:layout_width="70dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Cancel"
+                android:textAllCaps="true" />
+
+            <TextView
+                android:id="@+id/toolbar_upload"
+                android:layout_width="219dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:text="Upload"
+                android:textStyle="bold"
+                android:textAllCaps="true" />
+
+            <TextView
+                android:id="@+id/toolbar_save"
+                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:text="Save"
+                android:textAllCaps="true" />
+
+
+        </LinearLayout>
+
+
+    </android.support.v7.widget.Toolbar>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp">
+        android:background="@color/colorPureWhite">
 
-        <android.support.v4.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="6dp"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <View
+                    android:id="@+id/view6"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorGrey1"
+                    android:layout_marginTop="5dp"/>
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.9">
+
+                <com.tattood.tattood.DrawView
+                    android:id="@+id/tattoo_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:adjustViewBounds="true"
+                    android:background="@color/colorPureWhite"
+                    android:contentDescription="@string/tattoo_description"
+                    tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
+                    <!--android:scaleType="fitCenter"-->
+
+
+            </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="11dp"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <View
+                    android:id="@+id/view7"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/colorGrey1"
+                    android:layout_marginTop="0dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:background="@color/colorPureWhite"
                 android:orientation="vertical"
                 android:weightSum="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="6dp"
-                    android:orientation="vertical"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:weightSum="1">
 
-                    <View
-                        android:id="@+id/view6"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/colorGrey1"
-                        android:layout_marginTop="5dp"/>
+                    <Switch
+                        android:id="@+id/switch_visibility"
+                        android:layout_width="53dp"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="viewStart" />
+
+                    <TextView
+                        android:id="@+id/label_visibility"
+                        android:layout_width="216dp"
+                        android:layout_height="wrap_content"
+                        android:text="Public"
+                        android:layout_marginLeft="10dp"
+                        android:layout_weight="0.62" />
+                    <ImageView
+                        android:id="@+id/crop_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignTop="@+id/tattoo_image"
+                        app:srcCompat="@drawable/ic_content_cut_black_24dp"/>
+
+                    <ImageView
+                        android:id="@+id/crop_revert"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@+id/crop_button"
+                        android:layout_marginLeft="10dp"
+                        app:srcCompat="@drawable/ic_replay_black_24dp"
+                        android:visibility="invisible"/>
+
                 </LinearLayout>
+
+                <EditText
+                    android:id="@+id/new_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/add_new_tag"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPersonName"
+                    android:maxLength="14"
+                    android:textColorHighlight="@color/colorNamn1"
+                    android:maxLines="1"/>
+
+                <com.cunoraz.tagview.TagView
+                    android:id="@+id/tag_list_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    app:lineMargin="5dp"
+                    app:tagMargin="5dp"
+                    app:textPaddingBottom="5dp"
+                    app:textPaddingLeft="8dp"
+                    app:textPaddingRight="8dp"
+                    app:textPaddingTop="5dp"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="0.9">
-
-                    <com.tattood.tattood.DrawView
-                        android:id="@+id/tattoo_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="5dp"
-                        android:adjustViewBounds="true"
-                        android:background="@color/colorPureWhite"
-                        android:contentDescription="@string/tattoo_description"
-                        tools:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal"/>
-                        <!--android:scaleType="fitCenter"-->
+                    android:layout_weight="7.32">
 
 
+                    <android.support.design.widget.FloatingActionButton
+                        android:id="@+id/edit_finish"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:gravity="end"
+                        app:layout_anchor="@+id/viewpager"
+                        app:layout_anchorGravity="bottom|right|end"
+                        app:srcCompat="@drawable/ic_file_upload_black_24dp"
+                        android:layout_margin="@dimen/fab_margin"
+                        android:clickable="true"
+                        app:backgroundTint="@color/colorSunriseGrey"
+                        />
                 </RelativeLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="11dp"
-                    android:orientation="vertical"
-                    android:weightSum="1">
-
-                    <View
-                        android:id="@+id/view7"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/colorGrey1"
-                        android:layout_marginTop="0dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.1"
-                    android:background="@color/colorPureWhite"
-                    android:orientation="vertical"
-                    android:weightSum="1">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
-
-                        <Switch
-                            android:id="@+id/switch_visibility"
-                            android:layout_width="53dp"
-                            android:layout_height="wrap_content"
-                            android:textAlignment="viewStart" />
-
-                        <TextView
-                            android:id="@+id/label_visibility"
-                            android:layout_width="216dp"
-                            android:layout_height="wrap_content"
-                            android:text="Public"
-                            android:layout_marginLeft="10dp"
-                            android:layout_weight="0.62" />
-                        <ImageView
-                            android:id="@+id/crop_button"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignTop="@+id/tattoo_image"
-                            app:srcCompat="@drawable/ic_content_cut_black_24dp"/>
-
-                        <ImageView
-                            android:id="@+id/crop_revert"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_below="@+id/crop_button"
-                            android:layout_marginLeft="10dp"
-                            app:srcCompat="@drawable/ic_replay_black_24dp"
-                            android:visibility="invisible"/>
-
-                    </LinearLayout>
-
-                    <EditText
-                        android:id="@+id/new_tag"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:hint="@string/add_new_tag"
-                        android:imeOptions="actionDone"
-                        android:inputType="textPersonName"
-                        android:maxLength="14"
-                        android:textColorHighlight="@color/colorNamn1"
-                        android:maxLines="1"/>
-
-                    <com.cunoraz.tagview.TagView
-                        android:id="@+id/tag_list_edit"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        app:lineMargin="5dp"
-                        app:tagMargin="5dp"
-                        app:textPaddingBottom="5dp"
-                        app:textPaddingLeft="8dp"
-                        app:textPaddingRight="8dp"
-                        app:textPaddingTop="5dp"/>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="7.32">
-
-
-                        <android.support.design.widget.FloatingActionButton
-                            android:id="@+id/edit_finish"
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:gravity="end"
-                            app:layout_anchor="@+id/viewpager"
-                            app:layout_anchorGravity="bottom|right|end"
-                            app:srcCompat="@drawable/ic_file_upload_black_24dp"
-                            android:layout_margin="@dimen/fab_margin"
-                            android:clickable="true"
-                            app:backgroundTint="@color/colorSunriseGrey"
-                            />
-                    </RelativeLayout>
-
-                </LinearLayout>
 
             </LinearLayout>
-        </android.support.v4.widget.NestedScrollView>
-    </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
